"""customers

Revision ID: 167dccbbaf30
Revises: 466274eb124f
Create Date: 2026-03-20 00:39:19.051175

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '167dccbbaf30'
down_revision = '466274eb124f'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('customers',
    sa.Column('full_name', sa.String(length=255), nullable=False),
    sa.Column('phone', sa.String(length=32), nullable=False),
    sa.Column('email', sa.String(length=255), nullable=True),
    sa.Column('dob', sa.String(length=16), nullable=True),
    sa.Column('gender', sa.String(length=16), nullable=True),
    sa.Column('address', sa.String(length=500), nullable=True),
    sa.Column('tags_json', sa.Text(), nullable=True),
    sa.Column('allergy_note', sa.Text(), nullable=True),
    sa.Column('marketing_consent', sa.Boolean(), nullable=False),
    sa.Column('note', sa.Text(), nullable=True),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('customers', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_customers_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_customers_email'), ['email'], unique=False)
        batch_op.create_index(batch_op.f('ix_customers_phone'), ['phone'], unique=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('customers', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_customers_phone'))
        batch_op.drop_index(batch_op.f('ix_customers_email'))
        batch_op.drop_index(batch_op.f('ix_customers_branch_id'))

    op.drop_table('customers')
    # ### end Alembic commands ###
