"""mvp entities

Revision ID: c465eb0830d5
Revises: 167dccbbaf30
Create Date: 2026-03-20 15:57:36.928703

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = 'c465eb0830d5'
down_revision = '167dccbbaf30'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('inventory_items',
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('sku', sa.String(length=64), nullable=True),
    sa.Column('unit', sa.String(length=32), nullable=False),
    sa.Column('min_stock', sa.Numeric(precision=12, scale=3), nullable=False),
    sa.Column('expiry_tracking', sa.Boolean(), nullable=False),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('inventory_items', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_inventory_items_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_inventory_items_sku'), ['sku'], unique=False)

    op.create_table('packages',
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('sessions_total', sa.Integer(), nullable=False),
    sa.Column('validity_days', sa.Integer(), nullable=True),
    sa.Column('shareable', sa.Boolean(), nullable=False),
    sa.Column('allowed_branches_json', sa.Text(), nullable=True),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('packages', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_packages_branch_id'), ['branch_id'], unique=False)

    op.create_table('resources',
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('resource_type', sa.String(length=32), nullable=False),
    sa.Column('code', sa.String(length=64), nullable=True),
    sa.Column('maintenance_flag', sa.Boolean(), nullable=False),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('note', sa.Text(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('resources', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_resources_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_resources_code'), ['code'], unique=False)
        batch_op.create_index(batch_op.f('ix_resources_resource_type'), ['resource_type'], unique=False)

    op.create_table('services',
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('price', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('duration_minutes', sa.Integer(), nullable=False),
    sa.Column('requirement_json', sa.Text(), nullable=True),
    sa.Column('consumable_recipe_json', sa.Text(), nullable=True),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('services', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_services_branch_id'), ['branch_id'], unique=False)

    op.create_table('staffs',
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('full_name', sa.String(length=255), nullable=False),
    sa.Column('phone', sa.String(length=32), nullable=True),
    sa.Column('title', sa.String(length=64), nullable=True),
    sa.Column('commission_scheme_json', sa.Text(), nullable=True),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('staffs', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_staffs_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_staffs_phone'), ['phone'], unique=False)
        batch_op.create_index(batch_op.f('ix_staffs_user_id'), ['user_id'], unique=False)

    op.create_table('stock_transactions',
    sa.Column('inventory_item_id', sa.Integer(), nullable=False),
    sa.Column('transaction_type', sa.String(length=32), nullable=False),
    sa.Column('delta_qty', sa.Numeric(precision=12, scale=3), nullable=False),
    sa.Column('source_type', sa.String(length=64), nullable=True),
    sa.Column('source_id', sa.Integer(), nullable=True),
    sa.Column('counterparty_branch_id', sa.Integer(), nullable=True),
    sa.Column('expiry_date', sa.Date(), nullable=True),
    sa.Column('note', sa.Text(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['inventory_item_id'], ['inventory_items.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('stock_transactions', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_stock_transactions_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_stock_transactions_counterparty_branch_id'), ['counterparty_branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_stock_transactions_expiry_date'), ['expiry_date'], unique=False)
        batch_op.create_index(batch_op.f('ix_stock_transactions_inventory_item_id'), ['inventory_item_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_stock_transactions_source_id'), ['source_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_stock_transactions_source_type'), ['source_type'], unique=False)
        batch_op.create_index(batch_op.f('ix_stock_transactions_transaction_type'), ['transaction_type'], unique=False)

    op.create_table('appointments',
    sa.Column('customer_id', sa.Integer(), nullable=False),
    sa.Column('service_id', sa.Integer(), nullable=True),
    sa.Column('staff_id', sa.Integer(), nullable=True),
    sa.Column('resource_id', sa.Integer(), nullable=True),
    sa.Column('start_time', sa.DateTime(), nullable=False),
    sa.Column('end_time', sa.DateTime(), nullable=False),
    sa.Column('buffer_before_minutes', sa.Integer(), nullable=False),
    sa.Column('buffer_after_minutes', sa.Integer(), nullable=False),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('note', sa.Text(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['customer_id'], ['customers.id'], ),
    sa.ForeignKeyConstraint(['resource_id'], ['resources.id'], ),
    sa.ForeignKeyConstraint(['service_id'], ['services.id'], ),
    sa.ForeignKeyConstraint(['staff_id'], ['staffs.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('appointments', schema=None) as batch_op:
        batch_op.create_index('ix_appointments_branch_end', ['branch_id', 'end_time'], unique=False)
        batch_op.create_index(batch_op.f('ix_appointments_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index('ix_appointments_branch_start', ['branch_id', 'start_time'], unique=False)
        batch_op.create_index(batch_op.f('ix_appointments_customer_id'), ['customer_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_appointments_end_time'), ['end_time'], unique=False)
        batch_op.create_index(batch_op.f('ix_appointments_resource_id'), ['resource_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_appointments_service_id'), ['service_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_appointments_staff_id'), ['staff_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_appointments_start_time'), ['start_time'], unique=False)
        batch_op.create_index(batch_op.f('ix_appointments_status'), ['status'], unique=False)

    op.create_table('invoices',
    sa.Column('customer_id', sa.Integer(), nullable=True),
    sa.Column('appointment_id', sa.Integer(), nullable=True),
    sa.Column('subtotal_amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('discount_amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('tax_amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('total_amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('paid_amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('balance_amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('line_items_json', sa.Text(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['appointment_id'], ['appointments.id'], ),
    sa.ForeignKeyConstraint(['customer_id'], ['customers.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('invoices', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_invoices_appointment_id'), ['appointment_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_invoices_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_invoices_customer_id'), ['customer_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_invoices_status'), ['status'], unique=False)

    op.create_table('treatment_notes',
    sa.Column('appointment_id', sa.Integer(), nullable=False),
    sa.Column('staff_id', sa.Integer(), nullable=True),
    sa.Column('subjective_note', sa.Text(), nullable=True),
    sa.Column('objective_note', sa.Text(), nullable=True),
    sa.Column('assessment_note', sa.Text(), nullable=True),
    sa.Column('plan_note', sa.Text(), nullable=True),
    sa.Column('attachment_json', sa.Text(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.ForeignKeyConstraint(['appointment_id'], ['appointments.id'], ),
    sa.ForeignKeyConstraint(['staff_id'], ['staffs.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('treatment_notes', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_treatment_notes_appointment_id'), ['appointment_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_treatment_notes_staff_id'), ['staff_id'], unique=False)

    op.create_table('commission_records',
    sa.Column('staff_id', sa.Integer(), nullable=False),
    sa.Column('invoice_id', sa.Integer(), nullable=True),
    sa.Column('source_type', sa.String(length=64), nullable=True),
    sa.Column('source_id', sa.Integer(), nullable=True),
    sa.Column('base_amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('rate_percent', sa.Numeric(precision=5, scale=2), nullable=True),
    sa.Column('commission_amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('payload_json', sa.Text(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['invoice_id'], ['invoices.id'], ),
    sa.ForeignKeyConstraint(['staff_id'], ['staffs.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('commission_records', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_commission_records_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_commission_records_invoice_id'), ['invoice_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_commission_records_source_id'), ['source_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_commission_records_source_type'), ['source_type'], unique=False)
        batch_op.create_index(batch_op.f('ix_commission_records_staff_id'), ['staff_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_commission_records_status'), ['status'], unique=False)

    op.create_table('payments',
    sa.Column('invoice_id', sa.Integer(), nullable=False),
    sa.Column('customer_id', sa.Integer(), nullable=True),
    sa.Column('amount', sa.Numeric(precision=12, scale=2), nullable=False),
    sa.Column('method', sa.String(length=32), nullable=False),
    sa.Column('status', sa.String(length=32), nullable=False),
    sa.Column('paid_at', sa.DateTime(), nullable=True),
    sa.Column('reference_code', sa.String(length=128), nullable=True),
    sa.Column('metadata_json', sa.Text(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('updated_at', sa.DateTime(), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('branch_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['customer_id'], ['customers.id'], ),
    sa.ForeignKeyConstraint(['invoice_id'], ['invoices.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('payments', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_payments_branch_id'), ['branch_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_payments_customer_id'), ['customer_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_payments_invoice_id'), ['invoice_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_payments_paid_at'), ['paid_at'], unique=False)
        batch_op.create_index(batch_op.f('ix_payments_reference_code'), ['reference_code'], unique=False)
        batch_op.create_index(batch_op.f('ix_payments_status'), ['status'], unique=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('payments', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_payments_status'))
        batch_op.drop_index(batch_op.f('ix_payments_reference_code'))
        batch_op.drop_index(batch_op.f('ix_payments_paid_at'))
        batch_op.drop_index(batch_op.f('ix_payments_invoice_id'))
        batch_op.drop_index(batch_op.f('ix_payments_customer_id'))
        batch_op.drop_index(batch_op.f('ix_payments_branch_id'))

    op.drop_table('payments')
    with op.batch_alter_table('commission_records', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_commission_records_status'))
        batch_op.drop_index(batch_op.f('ix_commission_records_staff_id'))
        batch_op.drop_index(batch_op.f('ix_commission_records_source_type'))
        batch_op.drop_index(batch_op.f('ix_commission_records_source_id'))
        batch_op.drop_index(batch_op.f('ix_commission_records_invoice_id'))
        batch_op.drop_index(batch_op.f('ix_commission_records_branch_id'))

    op.drop_table('commission_records')
    with op.batch_alter_table('treatment_notes', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_treatment_notes_staff_id'))
        batch_op.drop_index(batch_op.f('ix_treatment_notes_appointment_id'))

    op.drop_table('treatment_notes')
    with op.batch_alter_table('invoices', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_invoices_status'))
        batch_op.drop_index(batch_op.f('ix_invoices_customer_id'))
        batch_op.drop_index(batch_op.f('ix_invoices_branch_id'))
        batch_op.drop_index(batch_op.f('ix_invoices_appointment_id'))

    op.drop_table('invoices')
    with op.batch_alter_table('appointments', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_appointments_status'))
        batch_op.drop_index(batch_op.f('ix_appointments_start_time'))
        batch_op.drop_index(batch_op.f('ix_appointments_staff_id'))
        batch_op.drop_index(batch_op.f('ix_appointments_service_id'))
        batch_op.drop_index(batch_op.f('ix_appointments_resource_id'))
        batch_op.drop_index(batch_op.f('ix_appointments_end_time'))
        batch_op.drop_index(batch_op.f('ix_appointments_customer_id'))
        batch_op.drop_index('ix_appointments_branch_start')
        batch_op.drop_index(batch_op.f('ix_appointments_branch_id'))
        batch_op.drop_index('ix_appointments_branch_end')

    op.drop_table('appointments')
    with op.batch_alter_table('stock_transactions', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_stock_transactions_transaction_type'))
        batch_op.drop_index(batch_op.f('ix_stock_transactions_source_type'))
        batch_op.drop_index(batch_op.f('ix_stock_transactions_source_id'))
        batch_op.drop_index(batch_op.f('ix_stock_transactions_inventory_item_id'))
        batch_op.drop_index(batch_op.f('ix_stock_transactions_expiry_date'))
        batch_op.drop_index(batch_op.f('ix_stock_transactions_counterparty_branch_id'))
        batch_op.drop_index(batch_op.f('ix_stock_transactions_branch_id'))

    op.drop_table('stock_transactions')
    with op.batch_alter_table('staffs', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_staffs_user_id'))
        batch_op.drop_index(batch_op.f('ix_staffs_phone'))
        batch_op.drop_index(batch_op.f('ix_staffs_branch_id'))

    op.drop_table('staffs')
    with op.batch_alter_table('services', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_services_branch_id'))

    op.drop_table('services')
    with op.batch_alter_table('resources', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_resources_resource_type'))
        batch_op.drop_index(batch_op.f('ix_resources_code'))
        batch_op.drop_index(batch_op.f('ix_resources_branch_id'))

    op.drop_table('resources')
    with op.batch_alter_table('packages', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_packages_branch_id'))

    op.drop_table('packages')
    with op.batch_alter_table('inventory_items', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_inventory_items_sku'))
        batch_op.drop_index(batch_op.f('ix_inventory_items_branch_id'))

    op.drop_table('inventory_items')
    # ### end Alembic commands ###
