%% Diagrams (Mermaid) - Use case + ERD + core flows

%% 1) Use Case (MVP)
flowchart LR
  SA[Super Admin] -->|Quan tri he thong| SYS((He thong))
  BM[Quan ly chi nhanh] -->|Quan ly lich/nhan su/kho| SYS
  RE[Le tan] -->|Dat lich/Check-in| SYS
  TE[KTV] -->|Cap nhat phuc vu/Ghi chu| SYS
  CA[Thu ngan] -->|Hoa don/Thanh toan| SYS
  WH[Kho] -->|Nhap-xuat-ton| SYS

%% 2) ERD (High-level)
erDiagram
  BRANCH ||--o{ STAFF : has
  BRANCH ||--o{ APPOINTMENT : has
  BRANCH ||--o{ INVENTORY_ITEM : has
  CUSTOMER ||--o{ APPOINTMENT : books
  APPOINTMENT ||--o{ TREATMENT_NOTE : has
  APPOINTMENT ||--o{ INVOICE : generates
  INVOICE ||--o{ PAYMENT : paid_by

  BRANCH {
    string branch_id
    string name
    string address
    string status
  }

  CUSTOMER {
    string customer_id
    string full_name
    string phone
    string email
  }

  STAFF {
    string staff_id
    string branch_id
    string name
    string role
  }

  APPOINTMENT {
    string appointment_id
    string customer_id
    string branch_id
    datetime start_time
    datetime end_time
    string status
  }

  INVOICE {
    string invoice_id
    string appointment_id
    string branch_id
    float total_amount
    float paid_amount
    string payment_status
  }

  PAYMENT {
    string payment_id
    string invoice_id
    string method
    float amount
    datetime paid_at
  }

  INVENTORY_ITEM {
    string item_id
    string branch_id
    string name
    string sku
    float minimum_stock
  }

%% 3) Flow: Booking -> Service -> Payment -> Inventory
sequenceDiagram
  participant RE as Le tan
  participant API as Flask API
  participant DB as DB
  RE->>API: Tao Appointment
  API->>DB: Kiem tra xung dot + luu
  RE->>API: Check-in
  API->>DB: Cap nhat status
  TE->>API: Service completed + note
  API->>DB: Tru buoi goi (neu co)
  API->>DB: Tru kho theo dinh muc (neu co)
  CA->>API: Tao invoice + payment
  API->>DB: Luu invoice/payment + audit log
